force-app/main/default/objects/ContentVersion/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Na</fullName>
                <label>N/A</label>
            </value>
            <value>
                <fullName>Client</fullName>
                <label>Team Client</label>
            </value>
            <value>
                <fullName>TeamDog</fullName>
                <label>Team Dog</label>
            </value>
            <value>
                <fullName>TeamDog</fullName>
                <label>Team Dog</label>
            </value>
            <value>
                <fullName>Standalone</fullName>
                <label>Standalone Programs</label>
            </value>
            <value>
                <fullName>ADSiM</fullName>
                <label>Assistance Dogs Set in Motion</label>
            </value>
            <value>
                <fullName>Facilitator</fullName>
                <label>Team Facilitator</label>
            </value>
            <value>
                <fullName>Puppy</fullName>
                <label>Puppy Raiser</label>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
                <label>Staff/Contractor</label>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>