force-app/main/default/objects/ContentVersion/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Position_Files__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Media and Liability Release</fullName>
            </value>
            <value>
                <fullName>Emergency Contact</fullName>
            </value>
            <value>
                <fullName>Conflict of Interest</fullName>
            </value>
            <value>
                <fullName>Transmission of Notices</fullName>
            </value>
            <value>
                <fullName>Client Application</fullName>
            </value>
            <value>
                <fullName>LOMI</fullName>
            </value>
            <value>
                <fullName>veteran paperwork if applicable</fullName>
            </value>
            <value>
                <fullName>Client Program Agreement</fullName>
            </value>
            <value>
                <fullName>Client Certification Agreement</fullName>
            </value>
            <value>
                <fullName>Client Initial Certification Survey</fullName>
            </value>
            <value>
                <fullName>Assistance Dogs Set in Motion Application</fullName>
            </value>
            <value>
                <fullName>Assistance Dogs Set in Motion Program Agreement</fullName>
            </value>
            <value>
                <fullName>Teams Set in Motion Application</fullName>
            </value>
            <value>
                <fullName>Teams Set in Motion Program Agreement</fullName>
            </value>
            <value>
                <fullName>TF Application</fullName>
            </value>
            <value>
                <fullName>TF Reference letter 1</fullName>
            </value>
            <value>
                <fullName>TF Reference letter 2</fullName>
            </value>
            <value>
                <fullName>TF Program Agreement</fullName>
            </value>
            <value>
                <fullName>TF Certification Agreement</fullName>
            </value>
            <value>
                <fullName>TF Professional Growth Plan</fullName>
            </value>
            <value>
                <fullName>TF Initial Team Certification Survey</fullName>
            </value>
            <value>
                <fullName>TF Practicum</fullName>
            </value>
            <value>
                <fullName>TF Infraction notices as applicable</fullName>
            </value>
            <value>
                <fullName>Trainer Application</fullName>
            </value>
            <value>
                <fullName>Trainer Reference letter 1</fullName>
            </value>
            <value>
                <fullName>Trainer Reference letter 2</fullName>
            </value>
            <value>
                <fullName>Trainer Program Agreement</fullName>
            </value>
            <value>
                <fullName>Trainer Certification Agreement</fullName>
            </value>
            <value>
                <fullName>Trainer Infraction notices as applicable</fullName>
            </value>
            <value>
                <fullName>Vet Health Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>