force-app/main/default/objects/ContentVersion/fields/Position_Files__c.field-meta.xml
<CustomField>
    <fullName>Position_Files__c</fullName>
    <label>Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Team_Facilitator</fullName>
                <label>Team Facilitator</label>
            </value>
            <value>
                <fullName>Trainer</fullName>
            </value>
            <value>
                <fullName>Dog</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Lead_Facilitator</fullName>
                <isActive>false</isActive>
                <label>Lead Facilitator</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>