force-app/main/default/objects/ContentVersion/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PreApplication</fullName>
                <label>Pre Application</label>
            </value>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Assessment</fullName>
            </value>
            <value>
                <fullName>ContactForm</fullName>
                <label>Contact Form</label>
            </value>
            <value>
                <fullName>Agreement</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>CoI</fullName>
                <label>Conflict of Interest</label>
            </value>
            <value>
                <fullName>ToN</fullName>
                <label>Transmission of Notices</label>
            </value>
            <value>
                <fullName>LOMI</fullName>
                <label>Medical Provider Form</label>
            </value>
            <value>
                <fullName>Media</fullName>
                <label>Media Release</label>
            </value>
            <value>
                <fullName>VAPW</fullName>
                <label>Veteran Paperwork</label>
            </value>
            <value>
                <fullName>Survey</fullName>
                <label>Certification Survey</label>
            </value>
            <value>
                <fullName>Reference</fullName>
                <label>Reference Letter</label>
            </value>
            <value>
                <fullName>ClientReference</fullName>
                <label>Client Reference Letter</label>
            </value>
            <value>
                <fullName>ProfReference</fullName>
                <label>Professional Reference Letter</label>
            </value>
            <value>
                <fullName>ProgAgreement</fullName>
                <label>Program Agreement</label>
            </value>
            <value>
                <fullName>CertAgreement</fullName>
                <label>Certification Agreement</label>
            </value>
            <value>
                <fullName>Practicum</fullName>
            </value>
            <value>
                <fullName>InfrNotice</fullName>
                <label>Infraction Notice</label>
            </value>
            <value>
                <fullName>HealthForm</fullName>
                <label>Vet Health Form</label>
            </value>
            <value>
                <fullName>Notes</fullName>
                <label>Interview Notes</label>
            </value>
            <value>
                <fullName>Xray</fullName>
                <label>Vet Xray Report</label>
            </value>
            <value>
                <fullName>VacExams</fullName>
                <label>Vaccinations and Exams</label>
            </value>
            <value>
                <fullName>Resume</fullName>
            </value>
            <value>
                <fullName>Offer</fullName>
                <label>Offer Letter</label>
            </value>
            <value>
                <fullName>W4</fullName>
            </value>
            <value>
                <fullName>I9</fullName>
            </value>
            <value>
                <fullName>W9</fullName>
                <label>Contractor W9</label>
            </value>
            <value>
                <fullName>ApplicationVideo</fullName>
                <label>Application Video</label>
            </value>
            <value>
                <fullName>CGCForm</fullName>
                <label>CGC Form</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>